setup NUnit framework to work with UnitTest Project and implemented some basic tests to get everything working

--- a/TacticalGameAi/TacticalGameAi.csproj
+++ b/TacticalGameAi/TacticalGameAi.csproj
@@ -2,6 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject />
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="DecisionLayer\ActionSystem\" />
+    <Folder Include="DecisionLayer\PlannerSystem\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+  </ItemGroup>
 
 </Project>
