--- a/TacticalGameAi/TacticalGameAi.csproj
+++ b/TacticalGameAi/TacticalGameAi.csproj
@@ -5,6 +5,7 @@
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
