deleted failed xml reader attempt and removed all old pointless shit to clean up the project files

--- a/TacticalGameAiUnitTests/TacticalGameAiUnitTests.csproj
+++ b/TacticalGameAiUnitTests/TacticalGameAiUnitTests.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Folder Include="DecisionLayer\ActionSystem\" />
     <Folder Include="DecisionLayer\PlannerSystem\" />
+    <Folder Include="DecisionLayer\WorldRepresentationSystem\ValueObjects\XMLReaderSystemTests\" />
   </ItemGroup>
 
 </Project>
