--- a/TacticalGameAi/TacticalGameAi.csproj
+++ b/TacticalGameAi/TacticalGameAi.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+    <PackageReference Include="OptimizedPriorityQueue" Version="4.2.0" />
   </ItemGroup>
 
 </Project>
